methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: value ++ is not a member of Int
                                        while (p!=8) {if (estSurBiscuit()) {return true}; avance(); p++;}
                                                                                                     ^MethodsReturning:2: error: type mismatch;
 found   : Unit
 required: Boolean
                                        while (p!=8) {if (estSurBiscuit()) {return true}; avance(); p++;}
                                        ^MethodsReturning:4: error: return outside method definition
if (haveBaggle()) {return} else {droite();avance();gauche();}
                   ^